syntax = "proto3";

option java_multiple_files = true;
option java_package = "me.grpc.restaurant";

// menu items
enum Category {
  UNKNOWN = 0;
  APPETIZER = 1;
  MAIN_COURSE = 2;
  DESSERT = 3;
  BEVERAGE = 4;
  SIDE_DISH = 5;
}


message MenuItem {
  string name = 1;
  string description = 2;
  float price = 3;
  Category category = 4;  // category of the menu item (using the Category enum)
  bool available = 5;
}

message Restaurant {
  string name = 1;
  string location = 2;
  string contact_number = 3;
  repeated MenuItem menu = 4;

}

message RestaurantList {
  repeated Restaurant restaurants = 1;  // list of Restu messages
}

// service definition to manage restaurant and menu data
service RestaurantService {
  rpc AddRestaurant (Restaurant) returns (Response);

  rpc GetAllRestaurants (Empty) returns (RestaurantList);

  rpc GetRestaurantByName (NameRequest) returns (Restaurant);

  rpc GetMenuItemsByCategory (CategoryRequest) returns (MenuItemList);
}

//  (used in GetAllRestaurants)
message Empty {}

message NameRequest {
  string name = 1;
}

message CategoryRequest {
  Category category = 1;
}

message MenuItemList {
  repeated MenuItem items = 1;
}

message Response {
  bool success = 1;
  string message = 2;
}
